--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@web3forms/react": "^1.1.3",
     "cra-template": "1.2.0",
+    "date-fns": "^2.30.0",
     "prettier": "^3.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-contribution-calendar": "^1.5.3",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "vanta": "^0.5.24",
@@ -40,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
