--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-contribution-calendar": "^1.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "vanta": "^0.5.24",
